# Minimac4

./: .gitignore  CMakeLists.txt  CMakeLists_8txt.html  Doxyfile.in  README_8md.html  annotated.html  classdosage__writer-members.html  classdosage__writer.html  classdosage__writer_a5c5837d918ab455d5cc56b33f13142f2_icgraph.map  classdosage__writer_a5c5837d918ab455d5cc56b33f13142f2_icgraph.md5  classdosage__writer_ad377d2146427b208430b2fff795b1643_icgraph.map  classdosage__writer_ad377d2146427b208430b2fff795b1643_icgraph.md5  classdosage__writer_af4eafee4fde6dbc3fdd84f2142a04521_cgraph.map  classdosage__writer_af4eafee4fde6dbc3fdd84f2142a04521_cgraph.md5  classdosage__writer_af4eafee4fde6dbc3fdd84f2142a04521_icgraph.map  classdosage__writer_af4eafee4fde6dbc3fdd84f2142a04521_icgraph.md5  classes.html  classfull__dosages__results-members.html  classfull__dosages__results.html  classfull__dosages__results_a1a0630a02a40f5a515d3fcfd72940668_icgraph.map  classfull__dosages__results_a1a0630a02a40f5a515d3fcfd72940668_icgraph.md5  classfull__dosages__results_a4f2abb43322a58e7a797aee65674d0d6_icgraph.map  classfull__dosages__results_a4f2abb43322a58e7a797aee65674d0d6_icgraph.md5  classfull__dosages__results_af032e20785753ebc3d769f95af93c811_icgraph.map  classfull__dosages__results_af032e20785753ebc3d769f95af93c811_icgraph.md5  classgenetic__map__file-members.html  classgenetic__map__file.html  classgenetic__map__file_af9d9dec9d1657b85a7fb7d89e7be0d5b_icgraph.map  classgenetic__map__file_af9d9dec9d1657b85a7fb7d89e7be0d5b_icgraph.md5  classgetopt__wrapper-members.html  classgetopt__wrapper.html  classgetopt__wrapper__inherit__graph.map  classgetopt__wrapper__inherit__graph.md5  classgetopt__wrapper_a366b1f4a4703774169e8fddfe0be2713_icgraph.map  classgetopt__wrapper_a366b1f4a4703774169e8fddfe0be2713_icgraph.md5  classgetopt__wrapper_aa98b5afe6bc065f17e48401bdd90b04e_icgraph.map  classgetopt__wrapper_aa98b5afe6bc065f17e48401bdd90b04e_icgraph.md5  classhidden__markov__model-members.html  classhidden__markov__model.html  classhidden__markov__model_aa0e5498c4f7f7ed9f11d1f81e3335fc6_cgraph.map  (+343 more)
.devcontainer/: .gdbinit  Dockerfile  devcontainer.json  environment.yml  postCommand.sh
.github/workflows/: build_doxygen.yml  docker-build.yml
assets/html/: header.html
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  files_1.js  files_2.js  files_3.js  files_4.js  files_6.js  files_7.js  files_8.js  files_9.js  (+34 more)
src/: CMakeLists.txt  dosage_writer.hpp  getopt_wrapper.hpp  hidden_markov_model.hpp  imputation.cpp  imputation.hpp  input_prep.hpp  main.cpp  prog_args.hpp  recombination.hpp  unique_haplotype.hpp  variant.hpp
test/: CMakeLists.txt  run_main.cpp  run_main.hpp  test_Haploid_compress.cpp  test_Haploid_impute.cpp  test_Simple.cpp  test_Simple_compress.cpp  test_Simple_impute.cpp
test/data/: ref_panel.msav  ref_panel.vcf.gz.csi  ref_panel_with_haploid_sample.msav  ref_panel_with_haploid_sample.vcf.gz.csi  tar_panel.vcf.gz.csi  tar_panel_with_haploid_sample.vcf.gz.csi
